# shuttle-rust-api

./: Cargo.toml  README.md
src/: main.rs  model.rs
