[package]
name = "shuttle-rust-api"
version = "0.2.0"
edition = "2024"
authors = ["Maximiien Grzeczka"]
description = "Shuttle Actix Web API"
license = "MIT"
repository = "https://github.com/Maki-SIO/shuttle-rust-api"

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
chrono = "0.4.40"